# image-viewer

./: .gitignore  CMakeList.txt  CMakeLists.txt  Makefile  README.md
include/: cliflags.hpp  error.hpp  globals.hpp  types.hpp  utils.hpp
include/formats/base/: file.hpp
include/formats/bmp/: file.hpp  metadata.hpp
include/skutils/logger/: common.hpp  logger.hpp  strutils.hpp
src/: CMakeList.txt  cliflags.cpp  main.cpp  utils.cpp
src/formats/base/: file.cpp
src/formats/bmp/: file.cpp
